feat: add user main

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,253 @@
+:root,
+[data-vapor-theme="light"] {
+  --vapor-color-canvas: #f7f7f7;
+  --vapor-color-red-100: #ffcecc;
+  --vapor-color-red-200: #ffa9a7;
+  --vapor-color-red-300: #fb7376;
+  --vapor-color-red-400: #f65962;
+  --vapor-color-red-500: #d4333f;
+  --vapor-color-red-600: #b5041f;
+  --vapor-color-red-700: #970000;
+  --vapor-color-red-800: #710000;
+  --vapor-color-red-900: #4b0000;
+  --vapor-color-red-050: #ffeae9;
+  --vapor-color-pink-100: #ffcedb;
+  --vapor-color-pink-200: #fea7bf;
+  --vapor-color-pink-300: #f5739d;
+  --vapor-color-pink-400: #ec5d8f;
+  --vapor-color-pink-500: #cc3771;
+  --vapor-color-pink-600: #b00558;
+  --vapor-color-pink-700: #920041;
+  --vapor-color-pink-800: #6f0027;
+  --vapor-color-pink-900: #4b000f;
+  --vapor-color-pink-050: #ffeaf0;
+  --vapor-color-grape-100: #f1cffa;
+  --vapor-color-grape-200: #e6abf5;
+  --vapor-color-grape-300: #d57aed;
+  --vapor-color-grape-400: #cd62e9;
+  --vapor-color-grape-500: #af3ccc;
+  --vapor-color-grape-600: #9513b2;
+  --vapor-color-grape-700: #7b0098;
+  --vapor-color-grape-800: #5a0076;
+  --vapor-color-grape-900: #3a0053;
+  --vapor-color-grape-050: #f9e9fd;
+  --vapor-color-violet-100: #e6d1ff;
+  --vapor-color-violet-200: #d4b1ff;
+  --vapor-color-violet-300: #af8af9;
+  --vapor-color-violet-400: #9e79f6;
+  --vapor-color-violet-500: #7c56e7;
+  --vapor-color-violet-600: #653aca;
+  --vapor-color-violet-700: #5623b5;
+  --vapor-color-violet-800: #43009a;
+  --vapor-color-violet-900: #27006d;
+  --vapor-color-violet-050: #f5ecff;
+  --vapor-color-blue-100: #b6dfff;
+  --vapor-color-blue-200: #7ec7ff;
+  --vapor-color-blue-300: #4ba3f5;
+  --vapor-color-blue-400: #3c91f0;
+  --vapor-color-blue-500: #256de0;
+  --vapor-color-blue-600: #0152c3;
+  --vapor-color-blue-700: #003eae;
+  --vapor-color-blue-800: #002596;
+  --vapor-color-blue-900: #00027d;
+  --vapor-color-blue-050: #e0f1ff;
+  --vapor-color-cyan-100: #b0e2ec;
+  --vapor-color-cyan-200: #73cdde;
+  --vapor-color-cyan-300: #18adc6;
+  --vapor-color-cyan-400: #119db7;
+  --vapor-color-cyan-500: #027c97;
+  --vapor-color-cyan-600: #00617b;
+  --vapor-color-cyan-700: #004e67;
+  --vapor-color-cyan-800: #003951;
+  --vapor-color-cyan-900: #00233b;
+  --vapor-color-cyan-050: #ddf2f7;
+  --vapor-color-green-100: #ace7cf;
+  --vapor-color-green-200: #5ed4ab;
+  --vapor-color-green-300: #3db08b;
+  --vapor-color-green-400: #2da17d;
+  --vapor-color-green-500: #008160;
+  --vapor-color-green-600: #006647;
+  --vapor-color-green-700: #005335;
+  --vapor-color-green-800: #003e21;
+  --vapor-color-green-900: #00270e;
+  --vapor-color-green-050: #dcf5ea;
+  --vapor-color-lime-100: #bee794;
+  --vapor-color-lime-200: #8fd327;
+  --vapor-color-lime-300: #6bb018;
+  --vapor-color-lime-400: #5ba00f;
+  --vapor-color-lime-500: #3d8100;
+  --vapor-color-lime-600: #226700;
+  --vapor-color-lime-700: #0a5400;
+  --vapor-color-lime-800: #003e00;
+  --vapor-color-lime-900: #002800;
+  --vapor-color-lime-050: #e3f5d2;
+  --vapor-color-yellow-100: #ffd579;
+  --vapor-color-yellow-200: #f5b503;
+  --vapor-color-yellow-300: #d39100;
+  --vapor-color-yellow-400: #c48200;
+  --vapor-color-yellow-500: #a36300;
+  --vapor-color-yellow-600: #884900;
+  --vapor-color-yellow-700: #743700;
+  --vapor-color-yellow-800: #5e2200;
+  --vapor-color-yellow-900: #460a00;
+  --vapor-color-yellow-050: #ffeec9;
+  --vapor-color-orange-100: #ffd0ba;
+  --vapor-color-orange-200: #fbae8a;
+  --vapor-color-orange-300: #f27e42;
+  --vapor-color-orange-400: #ef6f25;
+  --vapor-color-orange-500: #ca440e;
+  --vapor-color-orange-600: #af1f00;
+  --vapor-color-orange-700: #960000;
+  --vapor-color-orange-800: #720000;
+  --vapor-color-orange-900: #4b0000;
+  --vapor-color-orange-050: #ffece3;
+  --vapor-color-gray-100: #dadada;
+  --vapor-color-gray-200: #c0c0c0;
+  --vapor-color-gray-300: #9e9e9e;
+  --vapor-color-gray-400: #8f8f8f;
+  --vapor-color-gray-500: #727272;
+  --vapor-color-gray-600: #5a5a5a;
+  --vapor-color-gray-700: #484848;
+  --vapor-color-gray-800: #343434;
+  --vapor-color-gray-900: #212121;
+  --vapor-color-gray-050: #efefef;
+  --vapor-color-background-primary-100: var(--vapor-color-orange-100);
+  --vapor-color-background-primary-200: var(--vapor-color-orange-400);
+  --vapor-color-border-primary: var(--vapor-color-orange-400);
+  --vapor-color-border-normal: var(--vapor-color-gray-100);
+  --vapor-color-foreground-primary-100: var(--vapor-color-orange-500);
+  --vapor-color-foreground-primary-200: var(--vapor-color-orange-600);
+  --vapor-color-background-canvas-100: var(--vapor-color-canvas);
+  --vapor-color-background-canvas-200: var(--vapor-color-gray-050);
+  --vapor-color-background-overlay-100: var(--vapor-color-canvas);
+  --vapor-color-foreground-inverse: var(--vapor-color-black);
+}
+
+[data-vapor-theme="dark"] {
+  --vapor-color-canvas: #232323;
+  --vapor-color-red-100: #750000;
+  --vapor-color-red-200: #950000;
+  --vapor-color-red-300: #be1628;
+  --vapor-color-red-400: #ce2b38;
+  --vapor-color-red-500: #f14f5a;
+  --vapor-color-red-600: #fd8283;
+  --vapor-color-red-700: #ffa7a6;
+  --vapor-color-red-800: #ffd2d0;
+  --vapor-color-red-900: #fff8f8;
+  --vapor-color-red-050: #590000;
+  --vapor-color-pink-100: #710028;
+  --vapor-color-pink-200: #910040;
+  --vapor-color-pink-300: #b8185f;
+  --vapor-color-pink-400: #c62f6b;
+  --vapor-color-pink-500: #e65588;
+  --vapor-color-pink-600: #f881a6;
+  --vapor-color-pink-700: #fea5be;
+  --vapor-color-pink-800: #ffd0dd;
+  --vapor-color-pink-900: #fff8fa;
+  --vapor-color-pink-050: #590018;
+  --vapor-color-grape-100: #5e0079;
+  --vapor-color-grape-200: #7a0097;
+  --vapor-color-grape-300: #9d21b9;
+  --vapor-color-grape-400: #aa34c6;
+  --vapor-color-grape-500: #c859e5;
+  --vapor-color-grape-600: #da87ef;
+  --vapor-color-grape-700: #e5a9f5;
+  --vapor-color-grape-800: #f2d2fb;
+  --vapor-color-grape-900: #fdf8fe;
+  --vapor-color-grape-050: #460060;
+  --vapor-color-violet-100: #45009e;
+  --vapor-color-violet-200: #5522b4;
+  --vapor-color-violet-300: #6b42d2;
+  --vapor-color-violet-400: #7750e0;
+  --vapor-color-violet-500: #9672f5;
+  --vapor-color-violet-600: #b994fa;
+  --vapor-color-violet-700: #d3affe;
+  --vapor-color-violet-800: #e8d5ff;
+  --vapor-color-violet-900: #fbf8ff;
+  --vapor-color-violet-050: #30007e;
+  --vapor-color-blue-100: #002898;
+  --vapor-color-blue-200: #003dad;
+  --vapor-color-blue-300: #0e5acb;
+  --vapor-color-blue-400: #1f67da;
+  --vapor-color-blue-500: #368aed;
+  --vapor-color-blue-600: #56acf9;
+  --vapor-color-blue-700: #7bc6ff;
+  --vapor-color-blue-800: #bce1ff;
+  --vapor-color-blue-900: #f5faff;
+  --vapor-color-blue-050: #001286;
+  --vapor-color-cyan-100: #003b53;
+  --vapor-color-cyan-200: #004e66;
+  --vapor-color-cyan-300: #006983;
+  --vapor-color-cyan-400: #007790;
+  --vapor-color-cyan-500: #0e96b0;
+  --vapor-color-cyan-600: #1db6cf;
+  --vapor-color-cyan-700: #6fccdd;
+  --vapor-color-cyan-800: #b8e4ee;
+  --vapor-color-cyan-900: #f4fbfc;
+  --vapor-color-cyan-050: #002b43;
+  --vapor-color-green-100: #003f23;
+  --vapor-color-green-200: #005334;
+  --vapor-color-green-300: #006e4d;
+  --vapor-color-green-400: #007b5a;
+  --vapor-color-green-500: #259a77;
+  --vapor-color-green-600: #46b993;
+  --vapor-color-green-700: #5dd3aa;
+  --vapor-color-green-800: #b0e8d1;
+  --vapor-color-green-900: #f3fbf8;
+  --vapor-color-green-050: #003016;
+  --vapor-color-lime-100: #004000;
+  --vapor-color-lime-200: #095400;
+  --vapor-color-lime-300: #296e00;
+  --vapor-color-lime-400: #377b00;
+  --vapor-color-lime-500: #559a0b;
+  --vapor-color-lime-600: #74b91c;
+  --vapor-color-lime-700: #8dd126;
+  --vapor-color-lime-800: #c2e89a;
+  --vapor-color-lime-900: #f5fcef;
+  --vapor-color-lime-050: #003100;
+  --vapor-color-yellow-100: #5f2400;
+  --vapor-color-yellow-200: #743700;
+  --vapor-color-yellow-300: #8f5100;
+  --vapor-color-yellow-400: #9d5d00;
+  --vapor-color-yellow-500: #be7b00;
+  --vapor-color-yellow-600: #dd9a00;
+  --vapor-color-yellow-700: #f4b402;
+  --vapor-color-yellow-800: #ffd782;
+  --vapor-color-yellow-900: #fff9ee;
+  --vapor-color-yellow-050: #4f1400;
+  --vapor-color-orange-100: #750000;
+  --vapor-color-orange-200: #950000;
+  --vapor-color-orange-300: #b72b03;
+  --vapor-color-orange-400: #c43d0a;
+  --vapor-color-orange-500: #ef6f25;
+  --vapor-color-orange-600: #f58a56;
+  --vapor-color-orange-700: #fbac87;
+  --vapor-color-orange-800: #ffd3c0;
+  --vapor-color-orange-900: #fff9f5;
+  --vapor-color-orange-050: #5a0000;
+  --vapor-color-gray-100: #363636;
+  --vapor-color-gray-200: #474747;
+  --vapor-color-gray-300: #606060;
+  --vapor-color-gray-400: #6c6c6c;
+  --vapor-color-gray-500: #898989;
+  --vapor-color-gray-600: #a6a6a6;
+  --vapor-color-gray-700: #bebebe;
+  --vapor-color-gray-800: #dcdcdc;
+  --vapor-color-gray-900: #f9f9f9;
+  --vapor-color-gray-050: #282828;
+  --vapor-color-background-primary-100: var(--vapor-color-orange-050);
+  --vapor-color-background-primary-200: var(--vapor-color-orange-500);
+  --vapor-color-border-primary: var(--vapor-color-orange-500);
+  --vapor-color-border-normal: var(--vapor-color-gray-300);
+  --vapor-color-foreground-primary-100: var(--vapor-color-orange-600);
+  --vapor-color-foreground-primary-200: var(--vapor-color-orange-700);
+  --vapor-color-background-canvas-100: var(--vapor-color-canvas);
+  --vapor-color-background-canvas-200: var(--vapor-color-gray-050);
+  --vapor-color-background-overlay-100: var(--vapor-color-gray-100);
+  --vapor-color-foreground-inverse: var(--vapor-color-black);
+}
+
 @layer tw-theme, vapor, tw-utilities;
-@import '@vapor-ui/core/tailwind.css';
-@import 'tailwindcss/theme.css' layer(tw-theme);
-@import 'tailwindcss/utilities.css' layer(tw-utilities);
+@import "@vapor-ui/core/tailwind.css";
+@import "tailwindcss/theme.css" layer(tw-theme);
+@import "tailwindcss/utilities.css" layer(tw-utilities);
